# vulnerable-postgresql-read-only-mode

./: .gitignore  README.md  docker-compose.yml  init.sql
javascript/: README.md  index.js  package-lock.json  package.json
python/: README.md  main.py  pyproject.toml
